--- a/lcc/dashboard/css/main.css
+++ b/lcc/dashboard/css/main.css
@@ -27,7 +27,6 @@
   animation-name: animatetop;
   animation-duration: 0.4s
 }
-
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
@@ -58,9 +57,11 @@
   padding: 2px 16px;
   color: black;
 }
-
+.modall-header {
+  padding: 2px 16px;
+  color: black;
+}
 .modal-body {padding: 2px 16px;}
-
 .modal-footer {
   padding: 2px 16px;
   color: white;
